windows-malware-development-env/security_groups.tf
# The security groups define who can connect with the EC2 instances and over what ports. These settings also provide egress rules for what our EC2 instances can connect to outside of itself over the Internet. 


# Security group for C2-server
resource "aws_security_group" "win_mal_security_group" {

  name = "c2-security-group"

  description = "This security group is for the target and redirector EC2 Instances"

  # Ingress SSH
  ingress {

    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.IP_ADDRESS]

  }

  # Ingress HTTPS
  ingress {

    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [var.IP_ADDRESS]

  }

  # Ingress for RDP 
  ingress {

    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = [var.IP_ADDRESS]

  }

  # Egress everywhere
  egress {

    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.IP_ADDRESS]

  }


}
